fixed order cart items overflowing and goes beyond the view height

--- a/frontend/src/components/layouts/OrderDetailsBar/OrderDetailsBar.style.scss
+++ b/frontend/src/components/layouts/OrderDetailsBar/OrderDetailsBar.style.scss
@@ -9,8 +9,13 @@
   width: 350px;
   background-color: globalVariables.$white;
   padding: 20px;
+  gap: 20px;
 
   .order-items-container {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow-y: auto;
 
     .label {
       display: inline-block;
@@ -22,6 +27,8 @@
       align-items: center;
       flex-direction: column;
       gap: 5px;
+      flex: 1;
+      overflow-y: auto;
     }
   }
 
